# aish

./: .gitignore  .xonshrc  flake.nix  pyproject.toml
config/: aish.json  system_overview.md
config/agents/: default.md  deutsch.md
config/context_modules/: README.md  xonsh.xsh
config/instructions/: behavior_instructions.md  examples.md  identity_primer.md
src/aish/: __init__.py  aish.py  cli.py  providers.py  stream_handlers.py  stream_processor.py
