[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aish"
version = "0.1.0"
description = "AIsh"
requires-python = ">=3.13"
dependencies = [
    "python-frontmatter",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "rich",
    "platformdirs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aish"]

[project.scripts]
aish = "aish:main"
